--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,1 +1,12 @@
-preset: recommendedrisky: trueuse-tabs: truefinder:	exclude:		- vendor		- stubs	name: "*.php"	not-name:		- "*.yml"		- "*.stub"		- "*.md"
+preset: recommended
+risky: true
+use-tabs: true
+finder:
+    exclude:
+        - vendor
+        - stubs
+    name: "*.php"
+    not-name:
+        - "*.yml"
+        - "*.stub"
+        - "*.md"
