--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 	"require-dev":
 	{
 		"orchestra/testbench": "^4.0",
+		"squizlabs/php_codesniffer": "3.*",
 		"phpunit/phpunit": "^8.0"
 	},
 	"autoload-dev":
