--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
 	},
 	"scripts": {
 		"test": "vendor/bin/phpunit --testdox",
-		"lint": "vendor/bin/phpcs"
+		"lint": "vendor/bin/phpcs",
+		"lint:fix": "vendor/bin/phpcbf"
 	}
 }
